gitops/ingress/argo-ingress/argo-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argo-gateway
spec:
  selector:
    istio: ingress # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "argo.prod"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo
spec:
  hosts:
  - "argo.prod"
  gateways:
  - argo-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: argocd-server.argocd.svc.cluster.local
